# pdfgetx3_gui

./: .gitignore  LICENSE.md  LaB6_0p4mm_011_av10_monitor.fq  LaB6_0p4mm_011_av10_monitor.gr  LaB6_0p4mm_011_av10_monitor.sq  MANIFEST.in  README.md  gr_rho_fit.py  guilayout.py  guilayout.ui  main.py  pdffunctions.py  pdfgetx3_gui.py  pdfgetx3_gui.spec  pdfgetx3_gui.toml  pyproject.toml  setup.py  test.py
exampleFiles/: 0p4mm_capillary_018_av17_monitor.XYEtxt  BeamParameters.txt  LaB6_0p4mm_011_av10_monitor.fq  LaB6_0p4mm_011_av10_monitor.gr  LaB6_0p4mm_011_av10_monitor.sq  LaB6_0p4mm_011_av10_monitor_bkgsub.xy  bkg_011_av10_monitor.xye  capillary.XYtxt  functionTests.ipynb  startup.txt
exampleFiles/Xray/: GNUplot.plt  LaB6_0p4mm_011_av10_monitor.abscor  LaB6_0p4mm_011_av10_monitor.dofr  LaB6_0p4mm_011_av10_monitor.fpfac  LaB6_0p4mm_011_av10_monitor.gofr  LaB6_0p4mm_011_av10_monitor.gr2  LaB6_0p4mm_011_av10_monitor.mul  LaB6_0p4mm_011_av10_monitor.polcor  LaB6_0p4mm_011_av10_monitor.qsub  LaB6_0p4mm_011_av10_monitor.soq  LaB6_0p4mm_011_av10_monitor.subbak
exampleFiles/pdfgetxotuput/: LaB6_0p4mm_011_av10_monitor.gr  LaB6_0p4mm_011_av10_monitor.sq
pdfgetx3gui/: pdffunctions.py  pdfgetx3_gui.py  pdfworker.py
pdfgetx3gui/exampleFiles/: 0p4mm_capillary_018_av17_monitor.xye  LaB6_0p4mm_011_av10_monitor.iq  LaB6_0p4mm_011_av10_monitor.xye  capillary.xy
pdfgetx3gui/exampleFiles/Xray/: Fluorescence.abs  LaB6.brem  LaB6_0p4mm_011_av10_monitor.abs  LaB6_0p4mm_011_av10_monitor.fluor  LaB6_0p4mm_011_av10_monitor.fluorcor  LaB6_0p4mm_011_av10_monitor.gr1  LaB6_0p4mm_011_av10_monitor.hist  LaB6_0p4mm_011_av10_monitor.int01  LaB6_0p4mm_011_av10_monitor.mulcor  LaB6_0p4mm_011_av10_monitor.qback  LaB6_0p4mm_011_av10_monitor.qbin  LaB6_0p4mm_011_av10_monitor.qsmooth  LaB6_0p4mm_011_av10_monitor.sub2  LaB6_0p4mm_011_av10_monitor.subcan  LaB6_start.txt  LaB6_start_container.txt  XRDstartup_linux.txt  XRDstartup_windows.txt
pdfgetx3gui/exampleFiles/pdfgetxotuput/: LaB6_0p4mm_011_av10_monitor.fq
